--- a/form.html
+++ b/form.html
@@ -7,7 +7,7 @@
     <title>k8 Page</title>
 </head>
 <body bgcolor="Red">
-    <h1>Hello k8 Project class</h1>
+    <h1>kubernetes project works</h1>
 </body>
 </html>
 
